--- a/src/content/404.html
+++ b/src/content/404.html
@@ -7,9 +7,9 @@ permalink: /404/
 <main class="[ cover flow1 stack ] [ jc ]">
   <div class="[ cluster ] [ cx ic gx4 gy0 ]">
     <p class="[ fs3 fw700 ]">:(</p>
-    <div class="[ flow1/2 ]">
+    <div class="[ flow1 ]">
       <h1>404</h1>
-      <div class="[ fs2 ]">
+      <div class="[ flow1/3 ] [ fs2 ]">
         <p>We couldn't find what you're looking for.</p>
         <p>No hemos podido encontrar lo que estás buscando.</p>
       </div>
