--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -5,35 +5,12 @@ permalink: /en/
 description: The pain revolution is here. Whether you're a health professional, a person with pain, or just curious, BEVAE makes it easy to learn about the nature of pain and modern pain management principles.
 ---
 {% extends 'base.html' %}
-{% block head %}
-<link rel="preload" href="/assets/img/profile_me-res.jpg" as="image">
-{% endblock %}
+
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
   <div class="[ squeeze12 stack ] [ cx g4 ]">
-    <section class="[ sidebar ] [ g2 ]">
-      <div class="[ flow1 main67% ]">
-        <h1>Welcome!</h1>
-        <p>The International Association for the Study of Pain defines pain as "an unpleasant sensory and emotional experience associated with, or resembling that associated with, actual or potential tissue damage."</p>
-        <p>Pain is a very personal experience. It's necessary for us to survive, but sometimes it can get out of hand and be very distressing and disabling.</p>
-        <p>Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public. We work collectively to make these resources freely available in different languages.</p>
-      </div>
-      <div class="[ side6 cluster ] [ g2 ]">
-        <div class="[ squeeze6 stack ] [ g-1 ]">
-          <div class="[ image ] [ frame1:1 ]">
-            <img src="/assets/img/profile-frederik.jpg" alt="Frederik smiling at the camera">
-          </div>
-          <p class="[ fs-1 ]"><i>Frederik Kehlet</i></p>
-        </div>
-        <div class="[ squeeze6 stack ] [ g-1 ]">
-          <div class="[ image ] [ frame1:1 ]">
-            <img src="/assets/img/profile-zeph.jpg" alt="Zeph with cool sunglasses">
-          </div>
-          <p class="[ fs-1 ]"><i>Zeph Scamps</i></p>
-        </div>
-      </div>
-    </section>
+    {% include 'partials/homeIntro.html' %}
     <div class="[ switcher11 ] [ g3 ]">
       {% set posts = collections[locale + '_articles'] %}
       <section class="[ flow2 ]">
@@ -63,8 +40,8 @@ description: The pain revolution is here. Whether you're a health professional, 
             {% for entry in posts %}
             {% if entry.data.audience == 'patients' %}
             <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}{%endif %}</li>
-              {% endif %}
-              {% endfor %}
+            {% endif %}
+            {% endfor %}
           </ul>
         </div>
       </section>
@@ -74,10 +51,6 @@ description: The pain revolution is here. Whether you're a health professional, 
       <div class="[ flow1/3 ]">
         <h3>CSAW</h3>
         <p><a href="/csaw/">Click here</a> to view a webpage summary of the landmark CSAW surgical trial for subacromial shoulder pain.</p>
-      </div>
-      <div class="[ flow1/3 ]">
-        <h3>Exercise database</h3>
-        <p><em>Check back soon!</em></p>
       </div>
       <div class="[ flow1/3 ]">
         <h3>Journal club</h3>
