--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -5,61 +5,54 @@ permalink: /es/
 description: La revolución del dolor ya ha llegado. Si eres sanitario, o una persona con dolor o simplemente tienes curiosidad, BEVAE facilita el aprendizaje de la naturaleza del dolor y los principios modernos de su manejo.
 ---
 {% extends 'base.html' %}
-{% block head %}
-<link rel="preload" href="/assets/img/profile_me-res.jpg" as="image">
-{% endblock %}
 {% block body %}
 {% include 'partials/header.html' %}
+
 <main>
   <div class="[ squeeze12 stack ] [ cx g4 ]">
-    <section class="[ squeeze11 stack ] [ g2 ]">
-      <h1>¡Bienvenid@!</h1>
-      <div class="[ sidebar ] [ is g2 ]">
-        <div class="[ image ] [ frame1:1 side6 squeeze6 ]">
-          <img src="/assets/img/profile_me-res.jpg" alt="Frederik smiling at the camera">
-        </div>
-        <div class="main67% squeeze9 flow1">
-          <p>¡Hola! Me llamo Frederik y soy estudiante de fisioterapia en la Universidad San Pablo en Madrid, España. Me encanta promover la salud y ayudar a las personas a lograr sus objetivos funcionales.</p>
-          <p> Para una gran cantidad de gente en la sociedad existe una sensación y emoción muy personal, a menudo desagradable, que se mete en muchos aspectos de su vida: <strong>el dolor.</strong></p>
-          <p>Con un enfoque en el dolor como un síntoma así como una condición en sí mismo, es mi objetivo aquí desarrollar una variedad de recursos educativos gratuitos para clínicos, pacientes, y otras personas curiosas. Quiero facilitar la comprensión de esta experiencia tan común y a la vez tan malinterpretada y estigmatizada.</p>
-        </div>
-      </div>
-    </section>
-    <div class="switcher12 g3">
-      <section class="squeeze9 flow2">
-        <h2 class="h-fancy">Para Pacientes</h2>
-        <section class="flow1/3">
-          <h3>Dolor 101</h3>
-          <p class="fs-1"><em>Te has preguntado alguna vez, ¿qué es el dolor y cómo funciona? En esta serie de 3 partes, introduciremos conceptos claves en la ciencia del dolor que pueden resultarte útiles, independientemente de tu situación.</em></p>
-          <p><strong><em>¡Permanece atento a las entradas!</em></strong></p>
-        </section>
-      </section>
-      <section class="squeeze9 flow2">
-        <h2 class="h-fancy">Para Sanitarios</h2>
-        <section class="flow1/3">
+    {% include 'partials/homeIntro.html' %}
+    <div class="[ switcher11 ] [ g3 ]">
+      {% set posts = collections[locale + '_articles'] %}
+      <section class="[ flow2 ]">
+        <h2 class="[ h-fancy ]">Para clínic@s</h2>
+        <section class="[ flow1/3 ]">
           <h3>Entradas</h3>
-          <ul class="flow1/3">
-            {% set posts = collections[locale + '_articles'] %}
+          <ul class="[ flow1/3 ]">
             {% for entry in posts %}
+            {% if entry.data.audience == 'clinicians' %}
             <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}{%endif %}</li>
+            {% endif %}
             {% endfor %}
           </ul>
         </section>
-        <section class="flow1/3">
+        <section class="[ flow1/3 ]">
           <h3>Formularios</h3>
           <ul>
             <li><a href="/es/formularios/oemsq-12">ÖMSQ-12</a> - Un cuestionario práctico de cribaje en las dolencias musculoesqueléticas, adaptado y traducido de <i>Gabel et al. 2013.</i><strong> Aún no se ha validado en español.</strong></li>
           </ul>
         </section>
       </section>
-    </div>
-    <div class="[ flow2 ]">
-      <h2 class="[ h-fancy ]">Otros Projectos</h2>
-      <section class="[ flow1/3 ]">
-        <h3>Club de Investigación</h3>
-        <p><a href="/es/club/">Haz clic aquí</a> para ver información sobre el club de investigación de la Facultad de Medicina de USP CEU.</p>
+      <section class="[ flow2 ]">
+        <h2 class="[ h-fancy ]">Para pacientes</h2>
+        <div class="[ flow1/3 ]">
+          <h3>Entradas</h3>
+          <ul class="[ flow1/3 ]">
+            {% for entry in posts %}
+            {% if entry.data.audience == 'patients' %}
+            <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}{%endif %}</li>
+            {% endif %}
+            {% endfor %}
+          </ul>
+        </div>
       </section>
     </div>
+    <section class="[ flow2 ]">
+      <h2 class="[ h-fancy ]">Otros proyectos</h2>
+      <div class="[ flow1/3 ]">
+        <h3>Club de investigación</h3>
+        <p><a href="/es/club/">Haz clic aquí</a> para ver información sobre el club de investigación de la Facultad de Medicina de USP CEU.</p>
+      </div>
+    </section>
   </div>
 </main>
 {% include 'partials/footer.html' %}
