Translations to french!

--- a/src/content/csaw.html
+++ b/src/content/csaw.html
@@ -1,168 +1,159 @@
 ---
-title: CSAW
+title: The CSAW trial
 permalink: /csaw/
-description: Class activity (INV)
+description: The findings of this clinical trial pose a real challenge to the traditional understanding and management of subacromial shoulder pain
 ---
 {% extends "base.html" %}
-{% block head %}
-<style>
-.csaw-body {
-  max-inline-size: calc(var(--space12) * 1.5);
-}
-</style>
-{% endblock %}
-
 {% block body %}
-<div class="[ squeeze12 stack ] [ cx g4 px0 py2 ]">
-  <section class="[ stack ] [ g2 ]">
-    <div class="[ flow1/2 ]">
-      <h1>Can Shoulder Arthroscopy Work?</h1>
-      <p class="[ fs2 ]"><em>The CSAW trial</em></p>
-    </div>
-    <div class="[ cluster ] [ jb g2 fs-1 ]">
-      <div class="[ image ] [ frame1:1 squeeze7 ]"><img src="/assets/img/csaw-pain.jpg" alt=""></div>
-      <div class="[ flow2 ] [ pl0 bdl-1 bd-p500 ]">
-        <p>If you or someone you know is suffering from shoulder pain, making an informed decision about which treatment options to pursue can be difficult. Surgery is a frequently recommended option to treat the condition still commonly known as <em>subacromial impingement</em>.</p>
-        <p>This landmark clinical trial evaluated the effectiveness of subacromial decompression surgery, a commonly performed procedure, comparing it to a placebo (fake) surgery as well as no treatment. The findings pose a real challenge to the traditional understanding and management of subacromial shoulder pain.</p>
+<main class="[ bg-p100 ]">
+  <div class="[ squeeze12 stack ] [ cx nmy0 g4 ]">
+    <section class="[ stack ] [ g2 ]">
+      <div class="[ flow1/2 ]">
+        <h1>Can Shoulder Arthroscopy Work?</h1>
+        <p class="[ fs2 ]"><em>The CSAW trial</em></p>
       </div>
-    </div>
-  </section>
-
-  <div class="[ bdt0 bd-p200 ]"></div>
-
-  <section class="[ switcher10 ] [ g2 ]">
-    <h2 class="[ h ]">Inclusion and exclusion criteria</h2>
-    <div class="[ flow3/2 squeezebody ] [ ]">
-      <h3>Who was <span class="[ bdb-1 bd-n900 ]">included</span>?</h3>
-      <ul class="[ list-bullet ] [ flow1/2 ]">
-        <li>Subacromial pain for 3+ months</li>
-        <li>Intact rotator cuff tendons</li>
-        <li>Eligible for arthroscopic surgery</li>
-        <li>Completed a nonoperative program consisting of exercise and 1+ injection</li>
-      </ul>
-    </div>
-    <div class="[ flow3/2 squeezebody ] [ ]">
-      <h3>Who was <span class="[ bdb-1 bd-n900 ]">excluded</span>?</h3>
-      <ul class="[ list-bullet ] [ flow1/2 ]">
-        <li>Full thickness rotator cuff tears</li>
-        <li>Partial thickness tears were recorded but not excluded</li>
-      </ul>
-    </div>
-  </section>
-
-  <div class="[ bdt0 bd-p200 ]"></div>
-
-  <section class="[ stack ] [ tc g0 fc-p100 ]">
-    <div class="[ squeeze9 ] [ cx px2 py0 bg-n900 ]">
-      <p class="[ fs4 fw700 ]">313 subjects</p>
-    </div>
-    <div class="[ cluster ] [ ic jc g0 fc-p300 fs0 ]">
-      <p class="[ squeeze6 ] [ e te ]">Split evenly</p>
-      <div class="[ stack ] [ ic ]">
-        <div class="[ sc py2 bdl-1 bd-p300 bg-p300 ]"></div>
-      </div>
-      <p class="[ squeeze6 ] [ e ts ]">into 3 groups</p>
-    </div>
-    <div class="[ switcher11 ] [ g0 ]">
-      <div class="[ stack ] [ ]">
-        <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
-          <h3 class="[ fs1 ]">Decompression</h3>
-          <p>Real surgery</p>
-        </div>
-        <div class="[ switcher6 ]">
-          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-            <p><strong class="[ fs0 ]">53</strong><br>Age</p>
-          </div>
-          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-            <p><strong class="[ fs0 ]">51%</strong><br>Female</p>
-          </div>
+      <div class="[ cluster ] [ jb g2 fs-1 ]">
+        <div class="[ image ] [ frame1:1 squeeze7 ]"><img src="/assets/img/csaw-pain.jpg" alt=""></div>
+        <div class="[ flow2 ] [ pl0 bdl-1 bd-p500 ]">
+          <p>If you or someone you know is suffering from shoulder pain, making an informed decision about which treatment options to pursue can be difficult. Surgery is a frequently recommended option to treat a condition still commonly known as <em>subacromial impingement</em>.</p>
+          <p>This landmark clinical trial evaluated the effectiveness of subacromial decompression surgery, a commonly performed procedure, comparing it to a placebo (fake) surgery as well as no treatment. The findings pose a real challenge to the traditional understanding and management of subacromial shoulder pain.</p>
         </div>
       </div>
-      <div class="[ stack ] [ ]">
-        <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
-          <h3 class="[ fs1 ]">Arthroscopy</h3>
-          <p>Placebo surgery</p>
+    </section>
+
+    <div class="[ bdt0 bd-p200 ]"></div>
+
+    <section class="[ switcher10 ] [ g2 ]">
+      <h2 class="[ h ]">Inclusion and exclusion criteria</h2>
+      <div class="[ flow3/2 squeezebody ] [ ]">
+        <h3>Who was <span class="[ bdb-1 bd-n900 ]">included</span>?</h3>
+        <ul class="[ list-bullet ] [ flow1/2 ]">
+          <li>Subacromial pain for 3+ months</li>
+          <li>Intact rotator cuff tendons</li>
+          <li>Eligible for arthroscopic surgery</li>
+          <li>Completed a nonoperative program consisting of exercise and 1+ injection</li>
+        </ul>
+      </div>
+      <div class="[ flow3/2 squeezebody ] [ ]">
+        <h3>Who was <span class="[ bdb-1 bd-n900 ]">excluded</span>?</h3>
+        <ul class="[ list-bullet ] [ flow1/2 ]">
+          <li>Full thickness rotator cuff tears</li>
+          <li>Partial thickness tears were recorded but not excluded</li>
+        </ul>
+      </div>
+    </section>
+
+    <div class="[ bdt0 bd-p200 ]"></div>
+
+    <section class="[ stack ] [ tc g0 fc-p100 ]">
+      <div class="[ squeeze9 ] [ cx px2 py0 bg-n900 ]">
+        <p class="[ fs4 fw700 ]">313 subjects</p>
+      </div>
+      <div class="[ cluster ] [ ic jc g0 fc-p300 fs0 ]">
+        <p class="[ squeeze6 ] [ e te ]">Split evenly</p>
+        <div class="[ stack ] [ ic ]">
+          <div class="[ sc py2 bdl-1 bd-p300 bg-p300 ]"></div>
         </div>
-        <div class="[ switcher6 ]">
-          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-            <p><strong class="[ fs0 ]">54</strong><br>Age</p>
+        <p class="[ squeeze6 ] [ e ts ]">into 3 groups</p>
+      </div>
+      <div class="[ switcher11 ] [ g0 ]">
+        <div class="[ stack ] [ ]">
+          <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
+            <h3 class="[ fs1 ]">Decompression</h3>
+            <p>Real surgery</p>
           </div>
-          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-            <p><strong class="[ fs0 ]">50%</strong><br>Female</p>
+          <div class="[ switcher6 ]">
+            <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+              <p><strong class="[ fs0 ]">53</strong><br>Age</p>
+            </div>
+            <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+              <p><strong class="[ fs0 ]">51%</strong><br>Female</p>
+            </div>
+          </div>
+        </div>
+        <div class="[ stack ] [ ]">
+          <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
+            <h3 class="[ fs1 ]">Arthroscopy</h3>
+            <p>Placebo surgery</p>
+          </div>
+          <div class="[ switcher6 ]">
+            <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+              <p><strong class="[ fs0 ]">54</strong><br>Age</p>
+            </div>
+            <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+              <p><strong class="[ fs0 ]">50%</strong><br>Female</p>
+            </div>
+          </div>
+        </div>
+        <div class="[ stack ] [ ]">
+          <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
+            <h3 class="[ fs1 ]">No treatment</h3>
+            <p>Control group</p>
+          </div>
+          <div class="[ switcher6 ]">
+            <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+              <p><strong class="[ fs0 ]">53</strong><br>Age</p>
+            </div>
+            <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
+              <p><strong class="[ fs0 ]">50%</strong><br>Female</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="[ stack ] [ ]">
-        <div class="[ flow1/2 stack ] [ ic py0 bg-p500 ]">
-          <h3 class="[ fs1 ]">No treatment</h3>
-          <p>Control group</p>
+      <div class="[ switcher10 ] [ gx0 gy-3 ]">
+        <div class="[ pt2 fc-n900 fs3 ]">
+          Operated at<br><strong>30 sites</strong>
         </div>
-        <div class="[ switcher6 ]">
-          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-            <p><strong class="[ fs0 ]">53</strong><br>Age</p>
-          </div>
-          <div class="[ py-2 bg-n900 fc-n100 fs-1 ]">
-            <p><strong class="[ fs0 ]">50%</strong><br>Female</p>
-          </div>
+        <div class="[ pt2 fc-n900 fs3 ]">
+          Treated by<br><strong>38 surgeons</strong>
         </div>
       </div>
-    </div>
-    <div class="[ switcher10 ] [ gx0 gy-3 ]">
-      <div class="[ pt2 fc-n900 fs3 ]">
-        Operated at<br><strong>30 sites</strong>
+    </section>
+
+    <div class="[ bdt0 bd-p200 ]"></div>
+
+    <section class="[ flow2 squeezebody ] [ cx ]">
+      <h2 class="[ tc fs4 ]">Decompression is no better than sham.</h2>
+      <div class="[ image ]"><img src="/assets/img/csaw-results-custom.png" alt=""></div>
+      <p>Both surgical groups improved their Oxford Shoulder Score* compared to those who underwent no treatment, but decompression did <strong>not</strong> outperform arthroscopy.</p>
+      <p class="[ fs-2 ]"><i>* The Oxford Shoulder Score is a 48-point questionnaire that measures shoulder function.</i></p>
+    </section>
+
+    <div class="[ bdt0 bd-p200 ]"></div>
+
+    <section class="[ sidebar ] [ ic rr gx4 gy2 ]">
+      <div class="[ main50% stack ]">
+        <h2 class="[ h ]">Implications</h2>
+        <div class="[ flow1 ] [ p2 bg-n700 fc-n200 ]">
+          <h3>One interpretation</h3>
+          <p>Both decompression as well as arthroscopy are effective and could be considered as treatment strategies for subacromial pain.</p>
+        </div>
+        <div class="[ flow1 ] [ p2 bg-n900 fc-p100 ]">
+          <h3>More likely</h3>
+          <p>Surgery, although <em>statistically</em> better than no treatment, doesn't provide subacromial pain patients with a <em>clinically</em> meaningful benefit.</p>
+        </div>
       </div>
-      <div class="[ pt2 fc-n900 fs3 ]">
-        Treated by<br><strong>38 surgeons</strong>
-      </div>
+      <div class="[ flow2 side7 ] [ pl0 bdl-1 bd-p500 fs-1 ]">
+      <p><strong>Shoulder pain patients:</strong><br>Bring this study up with your trusted health professional. Ask them about the risks, benefits, and evidence behind your different treatment options. Collaborate to make an informed decision that's right for you.</p>
+      <p><strong>Health professionals:</strong><br>Invasive therapies can be powerful, but the validity of established procedures should not be taken for granted. Talk with your patients about the evidence regarding surgery for their condition. Collaborate to make an informed decision that's right for them.</p>
     </div>
-  </section>
+    </section>
 
-  <div class="[ bdt0 bd-p200 ]"></div>
+    <div class="[ bdt0 bd-p200 ]"></div>
 
-  <section class="[ flow2 squeezebody ] [ cx ]">
-    <h2 class="[ tc fs4 ]">Decompression is no better than sham.</h2>
-    <div class="[ image ]"><img src="/assets/img/csaw-results-custom.png" alt=""></div>
-    <p>Both surgical groups improved their Oxford Shoulder Score* compared to those who underwent no treatment, but decompression did <strong>not</strong> outperform arthroscopy.</p>
-    <p class="[ fs-2 ]"><i>* The Oxford Shoulder Score is a 48-point questionnaire that measures shoulder function.</i></p>
-  </section>
-
-  <div class="[ bdt0 bd-p200 ]"></div>
-
-  <section class="[ sidebar ] [ ic rr gx4 gy2 ]">
-    <div class="[ main50% stack ]">
-      <h2 class="[ h ]">Implications</h2>
-      <div class="[ flow1 ] [ p2 bg-n700 fc-n200 ]">
-        <h3>One interpretation</h3>
-        <p>Both decompression as well as arthroscopy are effective and could be considered as treatment strategies for subacromial pain.</p>
+    <div class="[ cluster ] [ jb gx4 gy2 ]">
+      <div class="[ flow2 ] [ fs-1 ]">
+        <h2>References</h2>
+        <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
       </div>
-      <div class="[ flow1 ] [ p2 bg-n900 fc-p100 ]">
-        <h3>More likely</h3>
-        <p>Surgery, although <em>statistically</em> better than no treatment, doesn't provide subacromial pain patients with a <em>clinically</em> meaningful benefit.</p>
+      <div class="[ squeeze6 stack ] [ g-1 fs-2 ]">
+        <div class="[ image ]"><img src="/assets/img/ceu-logo.jpg" alt=""></div>
+        <div class="[ flow1/3 ]">
+          <p><i>Made by Frederik Kehlet for Research in the Health Sciences, a 6th semester physiotherapy class</i></p>
+        </div>
+        <p><a href="/en/">Go back home</a></p>
       </div>
-    </div>
-    <div class="[ flow2 side7 ] [ pl0 bdl-1 bd-p500 fs-1 ]">
-    <p><strong>Shoulder pain patients:</strong><br>Bring this study up with your trusted health professional. Ask them about the risks, benefits, and evidence behind your different treatment options. Collaborate to make an informed decision that's right for you.</p>
-    <p><strong>Health professionals:</strong><br>Invasive therapies can be powerful, but the validity of established procedures should not be taken for granted. Talk with your patients about the evidence regarding surgery for their condition. Collaborate to make an informed decision that's right for them.</p>
-    </div>
-  </section>
-
-  <div class="[ bdt0 bd-p200 ]"></div>
-
-  <div class="[ cluster ] [ jb gx4 gy2 ]">
-    <div class="[ flow2 ] [ fs-1 ]">
-      <h2>References</h2>
-      <p>Beard DJ, Rees JL, Cook JA, et al. Arthroscopic subacromial decompression for subacromial shoulder pain (CSAW): a multicentre, pragmatic, parallel group, placebo-controlled, three-group, randomised surgical trial. Lancet. 2018;391(10118):329-338.</p>
-    </div>
-    <div class="[ squeeze6 stack ] [ g-1 fs-2 ]">
-      <div class="[ image ]"><img src="/assets/img/ceu-logo.jpg" alt=""></div>
-      <div class="[ flow1/3 ]">
-        <p><i>Made by Frederik Kehlet for Research in the Health Sciences, a 6th semester physiotherapy class</i></p>
-      </div>
-      <p><a href="/en/">Go back home</a></p>
     </div>
   </div>
-
-
-
-</div>
+</main>
 {% endblock %}
