--- a/src/content/404.html
+++ b/src/content/404.html
@@ -9,9 +9,10 @@ permalink: /404/
     <p class="[ fs3 fw700 ]">:(</p>
     <div class="[ flow1 ]">
       <h1>404</h1>
-      <div class="[ flow1/3 ] [ fs2 ]">
+      <div class="[ flow1/2 ] [ fs1 ]">
         <p>We couldn't find what you're looking for.</p>
         <p>No hemos podido encontrar lo que estás buscando.</p>
+        <p>Nous n'avons pas trouvé ce que vous cherchez.</p>
       </div>
       <p><a href="/">Back to start / volver al inicio</a></p>
     </div>
