--- a/src/content/en/club.html
+++ b/src/content/en/club.html
@@ -17,36 +17,7 @@ description:
     </div>
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Schedule</h2>
-      <!-- <ul class="[ flow2 ]">
-        {% for event in club_schedule %}
-        {% if event.lang == 'en' and not event.archived %}
-        <li class="[ flow1 ]">
-          <h3>{{ event.topic }}</h3>
-          <p>{{ event.date }}{% if event.room %} | {{ event.time }} | {{ event.room }}{% endif %}</p>
-          {% for paper in event.papers %}
-          <p></p>
-          {% endfor %}
-          {% if event.prompts %}
-          <h4>Prompts</h4>
-          <ul class="[ flow1/2 ]">
-          {% for prompt in event.prompts %}
-          <li class="[ fs-1 ]"><em>{{ prompt }}</em></li>
-          {% endfor %}
-          </ul>
-          {% endif %}
-          {% if event.papers %}
-          <h4>Papers</h4>
-          <ul class="[ flow1/2 ]">
-          {% for paper in event.papers %}
-          <li class="[ fs-1 ]"><a href="{{ paper.url }}" target="_blank">{{ paper.title }}</a></li>
-          {% endfor %}
-          </ul>
-          {% endif %}
-        </li>
-        {% endif %}
-        {% endfor %}
-      </ul> -->
-      <p>Until further notice, all journal club sessions will take place in Spanish. Please <a href="/es/club/">refer to the Spanish page</a></p>
+      <p>Until further notice, all journal club sessions will take place in Spanish. <a href="/es/club/">Refer to the Spanish page</a> for the schedule.</p>
     </section>
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Info</h2>
