--- a/src/content/index.html
+++ b/src/content/index.html
@@ -9,7 +9,8 @@ description: The pain revolution is here. Whether you're a health professional, 
   <div class="[ stack ] [ g0 ]">
     <div class="[ flow1/3 ]">
       <p>Choose a language</p>
-      <p>Elige un idioma</p>
+      <p>Eligir un idioma</p>
+      <p>Choisir une langue</p>
     </div>
     <ul class="[ flow1/2 ] [ fs1 ] [ pt0 bdt-2 bd-p500 ]">
       {% for language in site.languages %}
