--- a/src/content/en/csaw.html
+++ b/src/content/en/csaw.html
@@ -1,7 +1,7 @@
 ---
 title: The CSAW trial
-permalink: /csaw/
-description: The findings of this clinical trial pose a real challenge to the traditional understanding and management of subacromial shoulder pain
+permalink: /en/csaw/
+description: The findings of this clinical trial pose a real challenge to the traditional understanding and management of subacromial shoulder pain.
 ---
 {% extends "base.html" %}
 {% block body %}
