--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -49,7 +49,7 @@ description: Pain is necessary for us to survive, but sometimes it can get out o
       <h2 class="[ h-fancy ]">Projects</h2>
       <div class="[ flow1/3 ]">
         <h3>CSAW</h3>
-        <p><a href="/csaw/">Click here</a> to view a webpage summary of the landmark CSAW surgical trial for subacromial shoulder pain.</p>
+        <p><a href="/en/csaw/">Click here</a> to view a webpage summary of the landmark CSAW surgical trial for subacromial shoulder pain.</p>
       </div>
       <div class="[ flow1/3 ]">
         <h3>Journal club</h3>
