--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -2,7 +2,7 @@
 translationKey: home
 title: Inicio
 permalink: /es/
-description: The pain revolution is here. Whether you're a health professional, a person with pain, or just curious, BEVAE makes it easy to learn about the nature of pain and modern pain management principles.
+description: The pain revolution is here. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.
 ---
 {% extends 'base.html' %}
 {% block body %}
