--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -2,7 +2,7 @@
 translationKey: home
 title: Home
 permalink: /en/
-description: Pain is necessary for us to survive, but sometimes it can get out of hand and be very distressing and disabling. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.
+description: The pain revolution is here. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.
 ---
 {% extends 'base.html' %}
 {% block body %}
