--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,7 +1,7 @@
 ---
-title: Welcome/bienvenid@
+title: Welcome/bienvenid@/bienvenue
 permalink: /
-description: The pain revolution is here. Whether you're a health professional, a person with pain, or just curious, BEVAE makes it easy to learn about the nature of pain and modern pain management principles.
+description: The pain revolution is here. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.
 ---
 {% extends "base.html" %}
 {% block body %}
