Remove index title

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,5 +1,5 @@
 ---
-title: Welcome/bienvenid@/bienvenue
+title:
 permalink: /
 description: The pain revolution is here. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.
 ---
