--- a/src/content/404.html
+++ b/src/content/404.html
@@ -12,9 +12,9 @@ permalink: /404/
       <div class="[ flow1/2 ] [ fs1 ]">
         <p>We couldn't find what you're looking for.</p>
         <p>No hemos podido encontrar lo que estás buscando.</p>
-        <p>Nous n'avons pas trouvé ce que vous cherchez.</p>
+        <p>Nous n'avons pas trouver ce que cherchez.</p>
       </div>
-      <p><a href="/">Back to start / volver al inicio</a></p>
+      <p><a href="/">Back to start / volver al inicio / retour au départ</a></p>
     </div>
   </div>
 </main>
