--- a/src/content/cn7.html
+++ b/src/content/cn7.html
@@ -42,7 +42,7 @@ description: Class activity (CN7)
   <div class="[ bdt0 bd-p200 ]"></div>
 
   <h2>Assessment</h2>
-  <h3 style="color: red; text-decoration: underline;">RED FLAGS</h3>
+  <h3 class="[ u ]" style="color: red">RED FLAGS</h3>
   <ul class="[ list-bullet ] [ flow1/3 ]">
     <li>Limb paresis</li>
     <li>Limb or facial paresthesia</li>
