--- a/src/content/en/forms/omsq.html
+++ b/src/content/en/forms/omsq.html
@@ -129,7 +129,7 @@ title: ÖMSQ-12
             </div>
           </li>
           <li class="stack g-1">
-            <p>What do you think is the risk that your current pain or problem will <span style="text-decoration: underline;">not</span> improve?<br><em class="fs-1">0 = no risk, 10 = very large risk</em></p>
+            <p>What do you think is the risk that your current pain or problem will <span class="[ u ]">not</span> improve?<br><em class="fs-1">0 = no risk, 10 = very large risk</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack ic ] [ fs-1 ]"><input name="q7" type="radio" value="0">0</label>
               <label class="[ stack ic ] [ fs-1 ]"><input name="q7" type="radio" value="1">1</label>
@@ -213,7 +213,7 @@ title: ÖMSQ-12
         <legend>Help us to better understand your current physical abilities.</legend>
         <ol class="stack g3" start="11">
           <li class="stack g-1">
-            <p>I can walk for an hour or participate in my normal <span style="text-decoration: underline;">light</span> recreational or sporting activities<br><em class="fs-1">0 = not at all, 10 = completely normal</em></p>
+            <p>I can walk for an hour or participate in my normal <span class="[ u ]">light</span> recreational or sporting activities<br><em class="fs-1">0 = not at all, 10 = completely normal</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack ic ] [ fs-1 ]"><input name="q11" type="radio" value="10">0</label>
               <label class="[ stack ic ] [ fs-1 ]"><input name="q11" type="radio" value="9">1</label>
