Update home descriptions

--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -2,7 +2,7 @@
 translationKey: home
 title: Inicio
 permalink: /es/
-description: The pain revolution is here. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.
+description: La revolución del dolor ha llegado. Nuestra misión es desarrollar recursos de educación y rehabilitación de dolor de alta calidad para clínicos, pacientes y el público en general.
 ---
 {% extends 'base.html' %}
 {% block body %}
