--- a/src/content/fr/home.html
+++ b/src/content/fr/home.html
@@ -2,7 +2,7 @@
 translationKey: home
 title: Home
 permalink: /fr/
-description: The pain revolution is here. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.
+description: La révolution de la douleur est arrivée. Notre mission est de développer des ressources d’éducation et de réadaptation de la douleur de qualité pour les cliniciens, les patients et le grand public.
 ---
 {% extends 'base.html' %}
 {% block body %}
@@ -10,13 +10,6 @@ description: The pain revolution is here. Our mission is to develop high-quality
 <main>
   <div class="[ squeeze12 stack ] [ cx g4 ]">
     {% include 'partials/homeIntro.html' %}
-    <section class="[ flow2 ]">
-      <h2 class="[ h-fancy ]">Projets</h2>
-      <div class="[ flow1/3 ]">
-        <h3>CSAW</h3>
-        <p><a href="/csaw/">Click here</a> to view a webpage summary of the landmark CSAW surgical trial for subacromial shoulder pain.</p>
-      </div>
-    </section>
   </div>
 </main>
 {% include 'partials/footer.html' %}
