--- a/src/content/fr/home.html
+++ b/src/content/fr/home.html
@@ -2,7 +2,7 @@
 translationKey: home
 title: Home
 permalink: /fr/
-description: La révolution de la douleur est arrivée. Notre mission est de développer des ressources d’éducation et de réadaptation de la douleur de qualité pour les cliniciens, les patients et le grand public.
+description: La révolution de la douleur est arrivée. Notre mission est de développer des ressources qualitatives d’éducation et de réadaptation de la douleur pour les cliniciens, les patients et le grand public.
 ---
 {% extends 'base.html' %}
 {% block body %}
