Update homepage titles

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -1,7 +1,7 @@
 ---
 translationKey: home
-title: Home
 permalink: /en/
+title: The pain revolution is here.
 description: The pain revolution is here. Our mission is to develop high-quality pain education and rehabilitation resources for clinicians, patients, and the general public.
 ---
 {% extends 'base.html' %}
