--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -1,6 +1,6 @@
 ---
 translationKey: home
-title: Inicio
+title: La revolución del dolor ha llegado.
 permalink: /es/
 description: La revolución del dolor ha llegado. Nuestra misión es desarrollar recursos de educación y rehabilitación de dolor de alta calidad para clínicos, pacientes y el público en general.
 ---
