--- a/src/content/fr/home.html
+++ b/src/content/fr/home.html
@@ -1,6 +1,6 @@
 ---
 translationKey: home
-title: Home
+title: La révolution de la douleur est arrivée.
 permalink: /fr/
 description: La révolution de la douleur est arrivée. Notre mission est de développer des ressources qualitatives d’éducation et de réadaptation de la douleur pour les cliniciens, les patients et le grand public.
 ---
