--- a/src/content/404.html
+++ b/src/content/404.html
@@ -10,11 +10,14 @@ permalink: /404/
     <div class="[ flow1 ]">
       <h1>404</h1>
       <div class="[ flow1/2 ] [ fs1 ]">
-        <p>We couldn't find what you're looking for.</p>
-        <p>No hemos podido encontrar lo que estás buscando.</p>
-        <p>Nous n'avons pas trouver ce que cherchez.</p>
+        <p><strong>We couldn't find what you're looking for.</strong></p>
+        <div class="[ flow1/2 ] [ fs-1 ]">
+          <p>Vi kunne ikke finde det, du leder efter.</p>
+          <p>No hemos podido encontrar lo que estás buscando.</p>
+          <p>Nous n'avons pas trouver ce que cherchez.</p>
+        </div>
       </div>
-      <p><a href="/">Back to start / volver al inicio / retour au départ</a></p>
+      <p><a href="/">Back to start / tilbage hjem / volver al inicio / retour au départ</a></p>
     </div>
   </div>
 </main>
