--- a/src/content/index.html
+++ b/src/content/index.html
@@ -7,10 +7,13 @@ description: The pain revolution is here. Our mission is to develop high-quality
 {% block body %}
 <main class="[ cover stack g3 ] [ jc ic p3 ]">
   <div class="[ stack ] [ g0 ]">
-    <div class="[ flow1/3 ]">
-      <p>Choose a language</p>
-      <p>Eligir un idioma</p>
-      <p>Choisir une langue</p>
+    <div class="[ flow1/2 ]">
+      <p><strong>Choose a language</strong></p>
+      <div class="[ flow1/2 ] [ fs-1 ]">
+        <p>Vælg et sprog</p>
+        <p>Eligir un idioma</p>
+        <p>Choisir une langue</p>
+      </div>
     </div>
     <ul class="[ flow1/2 ] [ fs1 ] [ pt0 bdt-2 bd-p500 ]">
       {% for language in site.languages %}
