Index font size

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -7,7 +7,7 @@ description: The pain revolution is here. Our mission is to develop high-quality
 {% block body %}
 <main class="[ cover stack g3 ] [ jc ic p3 ]">
   <div class="[ stack ] [ g0 ]">
-    <div class="[ flow1/2 ]">
+    <div class="[ flow1/2 ] [ fs1 ]">
       <p><strong>Choose a language</strong></p>
       <div class="[ flow1/2 ] [ fs-1 ]">
         <p>Vælg et sprog</p>
