--- a/src/content/404.html
+++ b/src/content/404.html
@@ -17,7 +17,7 @@ permalink: /404/
           <p>Nous n'avons pas trouver ce que cherchez.</p>
         </div>
       </div>
-      <p><a href="/">Back to start / tilbage hjem / volver al inicio / retour au départ</a></p>
+      <p><a href="/">Back to start / tilbage til startsiden / volver al inicio / retour au départ</a></p>
     </div>
   </div>
 </main>
